updating my Portfolio

--- a/index.html
+++ b/index.html
@@ -46,11 +46,8 @@
           <div class="background"></div>
         </div>
         <p>
-          Welcome to my portfolio! I am passionate front-end developer
-          specializing in Vue.js with over 3 years of experience in crafting
-          beautiful and functional web applications.I thrive on creating
-          responsive and user-friendly interfaces that provide a seamless user
-          experience.
+          Welcome! I’m a front-end developer with 4+ years of experience building responsive, high-performance web applications using Vue.js (Vue 3), JavaScript, HTML5, and CSS3. I’ve championed clean, user-centric design, revitalized interfaces for accessibility, and consistently delivered seamless user experiences. I’m currently expanding my skills in React.js, Angular, and Jest. 
+          I thrive in collaborative environments where I can craft elegant solutions, optimize performance, and bring ideas to life through intuitive UI.
           <span class="animate" style="--i: 4"></span>
         </p>
         <div class="btn-box">
@@ -91,36 +88,22 @@
           Frontend Developer!<span class="animate scroll" style="--i: 3"></span>
         </h3>
         <p id="about-text">
-          Throughout my career, I have extensively used Vue.js to develop user
-          interface applications. Vue.js is a powerful JavaScript framework that
-          allows for efficient and dynamic building of user interfaces. In my
-          projects, I have leveraged Vue.js to create responsive and interactive
-          user interfaces that provide a seamless user experience. I have used
-          Vue.js's component-based architecture to modularize my code and
-          improve code reusability. This has allowed me to develop scalable
-          applications with clean and maintainable code. Additionally, I have
-          utilized Vue.js's declarative rendering and reactive data-binding to
-          update the user interface dynamically based on data changes, providing
-          real-time updates to the users. Vue.js also offers convenient state
-          management options through tools like Vuex, which I have used to
-          manage and share data across different components efficiently.
-          Overall, my experience in developing user interface applications using
-          Vue.js has enabled me to build intuitive and performant applications
-          while also improving development productivity. Furthermore, I have a
-          strong foundation in modern web technologies, including HTML5, CSS3,
-          and JavaScript (ES6+). I have experience working with various
-          libraries and frameworks such as Vue Life Cycle Hooks, Vue Router for
-          navigation, Vuetify for UI components, Vuex Store for RestAPI's and
-          Axios for HTTP requests, Bootstrap & Material UI for CSS. My
-          proficiency in these tools allows me to create rich, interactive web
-          applications that are both visually appealing and highly functional. I
-          am also skilled in using Git for version control, ensuring
-          collaborative development and maintaining code integrity.Have followed
-          Alige Metholodies for Project using Rally. My problem-solving
-          abilities and attention to detail enable me to tackle complex
-          challenges effectively, delivering high-quality solutions that meet
-          user needs and business objectives.
-          <span class="animate scroll" style="--i: 4"></span>
+            I am a front-end developer with over 4 years of experience, having spearheaded the development of responsive, high-performance web applications using Vue.js (Vue2 & vue3), JavaScript (ES6+), HTML5, and CSS3.
+            I have leveraged Vue’s component-based architecture to modularize code, improve reusability, and scale complex applications efficiently.
+            <strong>Championed:</strong> intuitive UI/UX design by using Vuetify, Bootstrap, and Material UI to craft accessible, polished interfaces.
+            <strong>Utilized:</strong> Vuex for state management and Vue Router to streamline navigation across components in large-scale applications.
+            <strong>Engineered:</strong> real-time data updates using Vue’s reactive data binding and declarative rendering for seamless user interaction.
+            <strong>Integrated:</strong> REST APIs using Axios, enhancing data flow and responsiveness across the app.
+            <strong>Implemented:</strong> unit testing with Jest to ensure code reliability and reduce regression issues.
+            <strong>Collaborated:</strong> with designers and backend developers in Agile teams, using Rally to track sprints and user stories.
+            <strong>Maintained:</strong> clean Git workflows for version control, ensuring smooth collaboration and continuous delivery.
+            <strong>Revamped:</strong> legacy codebases to improve performance, maintainability, and long-term scalability.
+            <strong>Diagnosed:</strong> UI issues and resolved bugs quickly to keep user experience smooth and production-ready.
+            <strong>Adapted quickly:</strong> to new frameworks like React.js and Angular, demonstrating a proactive learning mindset.
+            <strong>Optimized:</strong> front-end workflows to accelerate development time and boost deployment efficiency.
+            Presented technical ideas clearly in team meetings and advised on UI improvements and design best practices.
+            My focus is always on writing clean, maintainable code while delivering solutions that elevate user experience and support business goals.  
+         <span class="animate scroll" style="--i: 4"></span>
         </p>
         <div class="btn-box btns">
           <a
@@ -266,7 +249,13 @@
                 <h3>Jest <span>70%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
+
+              <div class="progress">
+                <h3>React JS and Angular JS(Beginner)<span>28%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
             </div>
+            
             <span class="animate scroll" style="--i: 3"></span>
           </div>
         </div>
@@ -309,6 +298,30 @@
           </h3>
 
           <div class="education-box">
+            <div class="education-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2024 -2025
+                </div>
+                <h3>“Appreciation Note”</h3>
+                <p>
+                  Earned appreciation from manager, team, and cross-functional stakeholders for supporting multiple parallel projects while maintaining delivery of my own project on time and defect-free. Demonstrated exceptional time management, collaboration, and a strong commitment to team success under tight schedules.
+                </p>
+              </div>
+            </div>
+            <div class="education-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2023 -2024
+                </div>
+                <h3>“Appreciation Note”</h3>
+                <p>
+                  Received an appreciation note from the Delivery Partner for successfully spearheading
+                   and delivering a high-impact project within a short turnaround time, 
+                  demonstrating strong ownership, collaboration, and execution under pressure.
+                </p>
+              </div>
+            </div>
             <div class="education-content">
               <div class="content">
                 <div class="year">
@@ -403,12 +416,25 @@
           <h3 class="title">
             Projects <span class="animate scroll" style="--i: 2"></span>
           </h3>
-
           <div class="education-box">
             <div class="education-content">
               <div class="content">
                 <div class="year">
-                  <i class="bx bxs-calendar"></i>Nov 2023 - Present
+                  <i class="bx bxs-calendar"></i>OCT 2024 - Present
+                </div>
+                <h3>CPQ</h3>
+                <p>
+                  Contributed to a CPQ (Configure, Price, Quote) project for GE Aerospace, where I collaborated with 
+                  cross-functional teams to develop and maintain a dynamic front-end interface.Implemented scalable 
+                  UI components using Vue.js, optimized workflows, and ensured accuracy in configuration and pricing 
+                  modules, directly supporting complex aerospace quoting processes.
+                </p>
+              </div>
+            </div>
+            <div class="education-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i>Nov 2023 - OCT 2024
                 </div>
                 <h3>IDEAte</h3>
                 <p>
