--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
           <div class="background"></div>
         </div>
         <p>
-          Welcome! I’m a front-end developer with 4+ years of experience building responsive, high-performance web applications using Vue.js (Vue 3), JavaScript, HTML5, and CSS3. I’ve championed clean, user-centric design, revitalized interfaces for accessibility, and consistently delivered seamless user experiences. I’m currently expanding my skills in React.js, Angular, and Jest. 
-          I thrive in collaborative environments where I can craft elegant solutions, optimize performance, and bring ideas to life through intuitive UI.
+          Welcome! I am a front-end developer with 4+ years of experience building responsive,high-performance web applications 
+          using Vue.js (Vue 3, vue 2), JavaScript, HTML5, and CSS3. I have championed clean, user-centric design, revitalized 
+          interfaces for accessibility, and consistently delivered seamless user experiences. I am currently expanding my skills 
+          in React.js, Angular, and Jest. I thrive in collaborative environments where I can craft elegant solutions, optimize 
+          performance, and bring ideas to life through intuitive UI.
           <span class="animate" style="--i: 4"></span>
         </p>
         <div class="btn-box">
