--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="background"></div>
         </div>
         <p>
-          Welcome! I am a front-end developer with 4+ years of experience building responsive,high-performance web applications 
+          Welcome! I am a front-end developer with 4+ years of experience building responsive, high-performance web applications. 
           I have championed clean, user-centric design, revitalized interfaces for accessibility, and consistently delivered 
           seamless user experiences.I thrive in collaborative environments where I can craft elegant solutions, optimize 
           performance, and bring ideas to life through intuitive UI.
